권한 업데이트

--- a/.github/workflows/github_action_ecs_deploy.yml
+++ b/.github/workflows/github_action_ecs_deploy.yml
@@ -30,6 +30,9 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
     steps:
+      # 권한 부여
+      - name: Run chmod to make gradlew executable
+        run: chmod +x ./gradlew
       # 체크아웃
       - name: Checkout
         uses: actions/checkout@v3
